# agibot_d1_ros

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  package.xml  setup.sh  setup_default.sh  setup_local.sh
include/agibot_d1_ros/: highlevel_policy.hpp
launch/: d1_highlevel_bridge.launch.py  d1_state.launch.py
scripts/: d1_live_smoke
src/: d1_highlevel_bridge_node.cpp  d1_state_node.cpp
test/: policy_self_test.cpp
