<?xml version="1.0"?>
<package format="3">
  <name>agibot_d1_ros</name>
  <version>0.1.0</version>
  <description>ROS 2 bridge for Agibot D1 Ultra/Edu zsl-1 HighLevel SDK.</description>
  <maintainer email="skyboooox@users.noreply.github.com">skyboooox</maintainer>
  <license>GPL-3.0-or-later</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
